2001-01-31  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (xml_print_nis): test function for nis.

2001-01-28  Arturo Espinosa  <arturo@ximian.com>

	* *-conf.in, *.pl.in: added emacs style directives.

2001-01-28  Hans Petter Jansson  <hpj@ximian.com>

	* be.pl.in: Added disaster recovery, with 9 rotated backups.
	  Removed some bogus debug output someone left behind.

2001-01-26  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in: parsing now follows the new hash structure.

2001-01-26  Chema Celorio  <chema@celorio.com>

	* be.pl.in: if $verbose, print the file name before it is
	opened

2001-01-25  Arturo Espinosa  <arturo@ximian.com>

	* new_network-conf.in, network.pl.in, parse.pl.in: completly new
	  network code and parsing routines.
	* network-conf.in: overwrote with new_network-conf.in and cvs
	  removing new_network-conf.in. Saving a backup, though.

2001-01-22  Arturo Espinosa  <arturo@ximian.com>

	* add_amp.sh: dumb program that fixes missing & when calling
	  functions in perl code.
	* *-conf.in and be.pl.in: passed through add_amp.sh.

2001-01-18  Chema Celorio  <chema@celorio.com>

	* TODO: deleted

2001-01-18  Arturo Espinosa <arturo@ximian.com>

	* be.pl.in: be_network_get_redhat now gives away more info. Same
	  should be done for debian and SuSE.
	* network-conf.in: be_ppp_get_phone_redhat is called from
	  be_network_get_redhat to obtain the phone pppd dials.
	
2001-01-17 Tambet Ingo  <tambet@ximian.com>

	* Changelog: fixed my revious wacky entry. 

2001-01-17  Arturo Espinosa <arturo@ximian.com>

	* network-conf.in: print and parse interface tags. Also bring up
	  or down network interfaces, and report their status when printing.
	
2001-01-16  Arturo Espinosa <arturo@ximian.com>

	* network-conf.in: network backend.
	* guess_system.sh: stolen from autoconf, a script to tell the
	system the backends are running on.
	* Makefile.am: install guess_system.sh where be.pl goes.